added heading and image to header

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,11 @@
     <title>LC Morgan - Data Analyst</title>
 </head>
 <body>
-    <header></header>
+    <header>
+		<a href="./images/self.png"><img id="self-icon" alt="Self Insert Image" /></a>
+		<h1>LC Morgan</h1>
+		<p>Marketing and Exploratory Data Analyst</p>
+    </header>
     <main></main>
     <footer></footer>
 </body>
