fixed link in href in header in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-		<a href="./images/self.png"><img id="self-icon" alt="Self Insert Image" /></a>
+		<a href="./html/about.html"><img id="self-icon" alt="Self Insert Image" /></a>
 		<h1>LC Morgan</h1>
 		<p>Marketing and Exploratory Data Analyst</p>
     </header>
