--- a/html/misc.html
+++ b/html/misc.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other Projects</title>
-    <h1>Other Things I Enjoy</h1>
 </head>
 <body>
-    
+	<h1>Other Things I Enjoy</h1>
+	Art Portfolio
+    Mini-Comic: Tech Trials
 </body>
 </html>
