commented out notes in misc.html

--- a/html/misc.html
+++ b/html/misc.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Other Things I Enjoy</h1>
-	Art Portfolio
-    Mini-Comic: Tech Trials
+	<!--Art Portfolio
+    Mini-Comic: Tech Trials -->
 </body>
 </html>
