added header and main sections to contact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <h1>Where To Find Me</h1>
 </head>
 <body>
-	<ul>
-    	<li class="links">LinkedIn</li>
-    	<li class="links">GitHub</li>
-    	<li class="links">Kaggle</li>
-    	<li class="links">CodeWars</li>
-    </ul>
+	<header>
+		<h1>Where To Find Me</h1>
+    </header>
+    <main>
+		<ul>
+    		<li class="links">LinkedIn</li>
+    		<li class="links">GitHub</li>
+    		<li class="links">Kaggle</li>
+    		<li class="links">CodeWars</li>
+    	</ul>
+    </main>
 </body>
 </html>
