added contact list to contact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,11 @@
     <h1>Where To Find Me</h1>
 </head>
 <body>
-    
+	<ul>
+    	<li class="links">LinkedIn</li>
+    	<li class="links">GitHub</li>
+    	<li class="links">Kaggle</li>
+    	<li class="links">CodeWars</li>
+    </ul>
 </body>
 </html>
