commented out main sections in projects.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -11,8 +11,8 @@
 		<h1>Projects</h1>
     </header>
     <main>
-    	Coursework
-    	Independent
+    	<!-- Coursework
+    	Independent -->
     </main>
     <footer>
     </footer>
