added header, main, and footer sections to project.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,14 @@
     <title>Projects</title>
 </head>
 <body>
-    Coursework
-    Independent
+	<header>
+		<h1>Projects</h1>
+    </header>
+    <main>
+    	Coursework
+    	Independent
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
