added section tags to main in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,12 @@
     <p>Hello and welcome!</p>
     </header>
     <main>
-    	<!--Small summary section/3Ws (links to about me page for more info)
-    	Featured Project (use JS to randomizs) -->
+    <section>
+    	<!--Small summary section/3Ws (links to about me page for more info) -->
+      </section>
+      <section>
+    	<!-- Featured Project (use JS to randomize) -->
+      </section>
     </main>
     <footer></footer>
 </body>
