added planning notes to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,13 @@
     <header>
 		<a href="./html/about.html"><img id="self-icon" alt="Self Insert Image" /></a>
 		<h1>LC Morgan</h1>
-		<p>Marketing and Exploratory Data Analyst</p>
+		<h2>Marketing and Exploratory Data Analyst</h2>
+    <p>Hello and welcome!</p>
     </header>
-    <main></main>
+    <main>
+    	<!--Small summary section/3Ws (links to about me page for more info)
+    	Featured Project (use JS to randomizs) -->
+    </main>
     <footer></footer>
 </body>
 </html>
