specified headers and sections in projects.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -11,8 +11,21 @@
 		<h1>Projects</h1>
     </header>
     <main>
-    	<!-- Coursework
+		<!-- COOP DA Capstone Projects -->
+    	<section>
+			<h3>NYC Restaurant Data</h3>
+		</section>
+    	<section>
+			<h3>Team Client Project: SaveAway</h3>
+		</section>
+		<!-- Coursework
     	Independent -->
+    	<section>
+			<h3>Dataset on Neurodivergent Adults</h3>
+		</section>
+		<section>
+			<h3>Endangered Species List (IUCN)</h3>
+		</section>
     </main>
     <footer>
     </footer>
