added design notes to contact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -12,6 +12,7 @@
     </header>
     <main>
 		<ul>
+			<!-- Use open and closable sliding cards with JS for each section -->
     		<li class="links">LinkedIn</li>
     		<li class="links">GitHub</li>
     		<li class="links">Kaggle</li>
