added planning notes to misc.html

--- a/html/misc.html
+++ b/html/misc.html
@@ -9,6 +9,7 @@
 <body>
 	<h1>Other Things I Enjoy</h1>
 	<!--Art Portfolio
-    Mini-Comic: Tech Trials -->
+    Mini-Comic: Tech Trials
+    Algo Channel/Tiktok -->
 </body>
 </html>
