added writing notes to about.html

--- a/html/about.html
+++ b/html/about.html
@@ -7,6 +7,6 @@
     <title>About Me</title>
 </head>
 <body>
-    
+    <!-- Treat like a cover letter, but a bit more personal and light hearted-->
 </body>
 </html>
