added header main and footer tags to misc.html

--- a/html/misc.html
+++ b/html/misc.html
@@ -7,9 +7,14 @@
     <title>Other Projects</title>
 </head>
 <body>
+	<header>
 	<h1>Other Things I Enjoy</h1>
+    </header>
+    <main>
 	<!--Art Portfolio
     Mini-Comic: Tech Trials
     Algo Channel/Tiktok -->
+    </main>
+    <footer></footer>
 </body>
 </html>
