--- a/html/about.html
+++ b/html/about.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <!-- Treat like a cover letter, but a bit more personal and light hearted-->
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
