added notes to footer in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -10,6 +10,6 @@
     <!-- Treat like a cover letter, but a bit more personal and light hearted-->
     <header></header>
     <main></main>
-    <footer></footer>
+    <footer><!--Where to find me!(again, aside from Contact page)</footer>
 </body>
 </html>
