switched and added section blog blurb to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,14 @@
     </header>
     <main>
     <section>
-    	<!--Small summary section/3Ws (links to about me page for more info) -->
+    	<!-- Blog blurb-->
       </section>
       <section>
     	<!-- Featured Project (use JS to randomize) -->
       </section>
+	  <section>
+		  <!--Small summary section/3Ws (links to about me page for more info) -->
+	  </section>
     </main>
     <footer></footer>
 </body>
