added section extra notes to projects.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -26,6 +26,9 @@
 		<section>
 			<h3>Endangered Species List (IUCN)</h3>
 		</section>
+		<section>
+			<h3>Extra Notes on Projects</h3>
+		</section>
     </main>
     <footer>
     </footer>
