edited note in misc.html

--- a/html/misc.html
+++ b/html/misc.html
@@ -13,7 +13,8 @@
     <main>
 	<!--Art Portfolio
     Mini-Comic: Tech Trials
-    Algo Channel/Tiktok -->
+    Algo and LeetCode Channel/Tiktok -->
+
     </main>
     <footer></footer>
 </body>
