edited note in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
     <section>
-    	<!-- Blog blurb-->
+    	<!-- Blog blurb, keep updated-->
       </section>
       <section>
     	<!-- Featured Project (use JS to randomize) -->
