added notes to projects.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -11,7 +11,7 @@
 		<h1>Projects</h1>
     </header>
     <main>
-		<!-- COOP DA Capstone Projects -->
+		<!-- COOP DA Capstone Projects (Check Drive)-->
     	<section>
 			<h3>NYC Restaurant Data</h3>
 		</section>
@@ -19,7 +19,7 @@
 			<h3>Team Client Project: SaveAway</h3>
 		</section>
 		<!-- Coursework
-    	Independent -->
+    	Independent (Kaggle)-->
     	<section>
 			<h3>Dataset on Neurodivergent Adults</h3>
 		</section>
