--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <!-- Treat like a cover letter, but a bit more personal and light hearted-->
-    <header></header>
+    <header>
+        <h1>About Me</h1>
+    </header>
     <main></main>
     <footer><!--Where to find me!(again, aside from Contact page)--></footer>
 </body>
