added main text to about.html

--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,17 @@
     <header>
         <h1>About Me</h1>
     </header>
-    <main></main>
+    <main>
+        <section id="about">
+    <p>Hiya! Welcome to my site! I'm Ren, an entry-level software engineer with a passion for coding, problem-solving, and continuous learning. My journey in software development began with a fascination for how things work, which led me to explore various programming languages like Python, JavaScript, SQL etc. and technologies such as Excel, Tableau, and platforms like Google CoLabs and Kaggle.</p> 
+
+<p>As a neurodivergent individual, I bring a unique perspective to my work. My strengths lie in my attention to detail, pattern recognition, and ability to focus deeply on complex problems. These skills enable me to approach challenges from unconventional angles, often leading to innovative solutions. I believe that diversity in thought is a powerful asset in any team, and I strive to contribute my unique insights to every project I take on.</p>
+
+<p>When I’m not coding, you can find me drawing comics, brushing up on Leetcode and engaging in personal EDA projects, and playing my guitar! I am always looking forward to expanding my knowledge and skills, and I’m excited about the opportunity to apply my expertise to real-world challenges.</p>
+
+<p>Feel free to explore my projects, and if you’d like to connect, don’t hesitate to reach out. I’m always open to new opportunities and collaborations!</p>
+        </section>    
+    </main>
     <footer><!--Where to find me!(again, aside from Contact page)--></footer>
 </body>
 </html>
