more edits to previous in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,7 @@
 
 <p>As a neurodivergent individual, I believe I bring a unique perspective to my work. My strengths lie in my attention to detail, pattern recognition, and ability to focus deeply on complex problems. For instance, while working on (project here), I "action word + result".  These skills enable me to approach challenges from unconventional angles, often leading to innovative solutions. I believe that diversity in thought is a powerful asset in any team, and I strive to contribute my unique insights to every project I take on.</p>
 
-<p>When I’m not coding, you can find me brushing up on Leetcode and engaging in personal EDA projects, drawing comics, and playing my guitar! I am always looking forward to expanding my knowledge and skills, and I’m excited about the opportunity to apply my expertise to real-world challenges.</p>
+<p>When I’m not coding, you can find me brushing up on Leetcode(link) and engaging in personal EDA projects(kaggle), drawing comics(neocities), and playing my guitar! I am always looking forward to expanding my knowledge and skills, and I’m excited about the opportunity to apply my expertise to real-world challenges.</p>
 
 <p>Feel free to explore my projects on the <a href="./projects.html">Projects</a> page, and if you’d like to connect, don’t hesitate to reach out. I’m always open to new opportunities and collaborations!</p>
         </section>    
