edited prev in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
 
 <p>When I’m not coding, you can find me brushing up on Leetcode(link) and engaging in personal EDA projects(kaggle), drawing comics(neocities), and playing my guitar! I am always looking forward to expanding my knowledge and skills, and I’m excited about the opportunity to apply my expertise to real-world challenges.</p>
 
-<p>Feel free to explore my projects on the <a href="./projects.html">Projects</a> page, and if you’d like to connect, don’t hesitate to reach out. I’m always open to new opportunities and collaborations!</p>
+<p>Feel free to explore my projects on the <a href="./projects.html">Projects</a> page, and if you’d like to connect, don’t hesitate to reach out. I’m always open to new opportunities and collaborations! Thanks once more for stopping by!</p>
         </section>    
     </main>
     <footer><!--Where to find me!(again, aside from Contact page)--></footer>
