added page header to blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -7,7 +7,9 @@
     <title>Weekly Blog</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Welcome to My Weekly Blog!</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
