--- a/html/blog.html
+++ b/html/blog.html
@@ -11,6 +11,8 @@
         <h1>Welcome to My Weekly Blog!</h1>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+    	<!--Nav bar to other sections of the site and contact links-->
+    </footer>
 </body>
 </html>
