--- a/html/blog.html
+++ b/html/blog.html
@@ -10,7 +10,9 @@
     <header>
         <h1>Welcome to My Weekly Blog!</h1>
     </header>
-    <main></main>
+    <main>
+    	<!--Future project ideas, new skills you're learning, etc.-->
+    </main>
     <footer>
     	<!--Nav bar to other sections of the site and contact links-->
     </footer>
