added header to access.html

--- a/html/access.html
+++ b/html/access.html
@@ -7,7 +7,7 @@
     <title>AARIA and The Importance of Accessibility</title>
 </head>
 <body>
-	<header></header>
+	<header>The Importance of Accessibility</header>
     <main>
     	<section></section>
         <section></section>
