added notes to third section in access.html

--- a/html/access.html
+++ b/html/access.html
@@ -11,7 +11,7 @@
     <main>
     	<section></section>
         <section></section>
-        <section></section>
+        <section><!-- Extra Articles(opens new window)--></section>
     </main>
     <footer></footer>
 </body>
