added links to contact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -13,10 +13,11 @@
     <main>
 		<ul>
 			<!-- Use open and closable sliding cards with JS for each section -->
-    		<li class="links">LinkedIn</li>
-    		<li class="links">GitHub</li>
-    		<li class="links">Kaggle</li>
-    		<li class="links">CodeWars</li>
+    		<li class="links"><a href="linkedin.com">
+			LinkedIn</a></li>
+    		<a href="kaggle.com"><li class="links">GitHub</a></li>
+    		<a href="kaggle.com"><li class="links">Kaggle</a></li>
+    		<a href="codewars.com"><li class="links">CodeWars</a></li>
     	</ul>
     </main>
 </body>
