added note to top section of index.html

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
     <main>
     <section>
     	<!-- Blog blurb, keep updated-->
+      <!--"Read More" link that redirects to blog page-->
       </section>
       <section>
     	<!-- Featured Project (use JS to randomize) -->
