edited title and added h1 tag and text to access.html

--- a/html/access.html
+++ b/html/access.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AARIA, Disability and The Importance of Accessibility</title>
+    <title>Accessibility</title>
 </head>
 <body>
-	<header>The Importance of Accessibility</header>
+	<header>
+    	<h1>AARIA, Disability, and The Importance of Accessibility</h1>
+    </header>
     <main>
     	<section></section>
         <section></section>
