--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 		<a href="./html/about.html"><img id="self-icon" alt="Self Insert Image" /></a>
 		<h1>LC Morgan</h1>
 		<h2>Marketing and Exploratory Data Analyst</h2>
-    <p>Hello and welcome!</p>
+    <p>Hello and welcome to my site!</p>
     </header>
     <main>
     <section>
