edited text in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section id="about">
-    <p>Hiya! Welcome to my site! I'm Ren, an entry-level software engineer with a passion for coding, problem-solving, and continuous learning, based in NYC. My journey in software development began with a fascination for how things work, which led me to explore various programming languages like Python, JavaScript, SQL etc. and technologies such as Excel, Tableau, and platforms like Google CoLabs and Kaggle.</p> 
+    <p>Hiya! Welcome to my site! I'm Ren, an entry-level software engineer with a passion for coding, problem-solving, and continuous learning, based in NYC. My journey in software development began with a fascination for how things work, which led to me learning and exploring various programming languages like Python, JavaScript, SQL etc., as well technologies such as Excel, Tableau, and finally, platforms like Google CoLabs and Kaggle.</p> 
 
 <p>As a neurodivergent individual, I believe I bring a unique perspective to my work. My strengths lie in my attention to detail, pattern recognition, and ability to focus deeply on complex problems. For instance, while working on (project here), I "action word + result".  These skills enable me to approach challenges from unconventional angles, often leading to innovative solutions. I believe that diversity in thought is a powerful asset in any team, and I strive to contribute my unique insights to every project I take on.</p>
 
