--- a/html/blog.html
+++ b/html/blog.html
@@ -11,6 +11,7 @@
         <h1>Welcome to My Weekly Blog!</h1>
     </header>
     <main>
+        <!-- Project 1: Fall 2024-->
     	<!--Future project ideas, new skills you're learning, etc.-->
         <!--Maybe embed the blog from am external site/api?-->
     </main>
