--- a/html/blog.html
+++ b/html/blog.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Weekly Blog!</h1>
+        <h1>Welcome to My Update Blog!</h1>
     </header>
     <main>
-        <!-- Project 1: Fall 2024-->
+        <!-- Project 1: Fall 2024 (Kaggle)-->
     	<!--Future project ideas, new skills you're learning, etc.-->
         <!--Maybe embed the blog from am external site/api?-->
     </main>
