--- a/html/blog.html
+++ b/html/blog.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <!-- Project 1: Fall 2024 (Kaggle)-->
-        <!-- Reflection: SaveAway for a Rainy Day! (include images)-->
+        <!-- Reflection 1: SaveAway for a Rainy Day! (include images)-->
     	<!--Future project ideas, new skills you're learning, etc.-->
         <!--Maybe embed the blog from am external site/api?-->
     </main>
