added tr tags to blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -22,11 +22,15 @@
             		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis doloribus quisquam reiciendis dolorum dicta! Suscipit harum, earum repudiandae impedit illo minus? Reprehenderit magni, vitae porro necessitatibus natus mollitia ex.
             		</p>-->
 				<table>
+                <tr>
                 <th>Date</th>
                 <td>9-6-2024</td>
                 <th>Title</th>
                 <td>Why A Website?</td>
-                <th></th>
+                </tr>
+                <tr>
+                	<td colspan="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sunt fugiat tenetur quibusdam saepe magni culpa veniam nesciunt, aliquid ad consequatur asperiores voluptatum provident! Blanditiis possimus magnam culpa consequuntur consectetur.</td>
+                </tr>
 				</table>
         	</section>
     </main>
