added another blog entry to blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -25,6 +25,12 @@
                               <p class="date"></p>
                               <p class="blog-text"></p>
 					</li>
+					<li class="blog-entry">
+						<article id="post2">
+							<h2 id="blog1"></h2>
+                              <p class="date"></p>
+                              <p class="blog-text"></p>
+					</li>
 						</article>
 					</li>
 				</ul>
