--- a/html/blog.html
+++ b/html/blog.html
@@ -15,9 +15,9 @@
 				<ul class="blog-main">
 					<li class="blog-entry">
 						<article id="post1">
-							<h2 id="blog1"></h2>
-                              <p class="date"></p>
-                              <p class="blog-text"></p>
+							<h2 id="blog1">Why A Blog?</h2>
+                              <p class="date">Sept 9, 2024</p>
+                              <p class="blog-text">Welcome!I know it's a bit strange to have a blog on portfolio website, but I have a lot to say. I also think it'd bring a bit more of a personal touch to otherwise similar looking portfolios! On that side note, I will most likely type future entries in a separate word processor and copy paste them here.</p>
 					</li>
 					<li class="blog-entry">
 						<article id="post2">
