edited h2 tag id and title to post1 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -15,7 +15,7 @@
 				<ul class="blog-main">
 					<li class="blog-entry">
 						<article id="post1">
-							<h2 id="blog1">But...why A Blog?(First Post!)</h2>
+							<h2 id="title1">But...Why A Blog?(First Post!)</h2>
                               <p class="date">Sept 9, 2024</p>
                               <p class="blog-text">Welcome! I know it's a bit strange to have a blog on portfolio website, but I have a lot to say. I also think it'd bring a bit more of a personal touch to otherwise similar looking portfolios! On that side note, I will most likely type future entries in a separate word processor and copy paste them here.</p>
 					</li>
