added title to post 2 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -21,7 +21,7 @@
 					</li>
 					<li class="blog-entry">
 						<article id="post2">
-							<h2 id="blog1"></h2>
+							<h2 id="title2">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
                               <p class="blog-text"></p>
 					</li>
