added title to post 3 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -27,7 +27,7 @@
 					</li>
 					<li class="blog-entry">
 						<article id="post2">
-							<h2 id="blog1"></h2>
+							<h2 id="blog1">SQL or Python: Wait, what about Excel?</h2>
                               <p class="date"></p>
                               <p class="blog-text"></p>
 					</li>
