--- a/html/blog.html
+++ b/html/blog.html
@@ -23,7 +23,7 @@
 						<article id="post2">
 							<h2 id="title2">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
-                              <p class="blog-text"></p>
+                              <p class="blog-text"><!--Who/What/Why and How--></p>
 					</li>
 					<li class="blog-entry">
 						<article id="post3">
