--- a/html/blog.html
+++ b/html/blog.html
@@ -21,13 +21,13 @@
 					</li>
 					<li class="blog-entry">
 						<article id="post2">
-							<h2 id="title2">Legatum Prosperity Index: Using Data For Good</h2>
+							<h2 id="title2">SQL or Python: Wait, what about Excel?</h2>
                               <p class="date"></p>
                               <p class="blog-text"><!--Who/What/Why and How--></p>
 					</li>
 					<li class="blog-entry">
 						<article id="post3">
-							<h2 id="blog1">SQL or Python: Wait, what about Excel?</h2>
+							<h2 id="blog1">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
                               <p class="blog-text"></p>
 					</li>
