--- a/html/blog.html
+++ b/html/blog.html
@@ -31,7 +31,12 @@
                               <p class="date"></p>
                               <p class="blog-text"></p>
 					</li>
-						</article>
+					<li class="blog-entry">
+						<article id="post4">
+							<h2 id="blog1">To Bootcamp or Not To? From a Former Student</h2>
+                              <p class="date"></p>
+                              <p class="blog-text"></p>
+					</li>
 					</li>
 				</ul>
         	</section>
