added add notes for post 3 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -29,7 +29,7 @@
 						<article id="post3">
 							<h2 id="blog1">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
-                              <p class="blog-text"><!--Who/What/Why and How--></p>
+                              <p class="blog-text"><!--Who/What/Why and How possible solutions to be solved and why do we still use GDP in the West--></p>
 					</li>
 					<li class="blog-entry">
 						<article id="post4">
