minor edit to notes in post 4 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -37,7 +37,7 @@
 						<article id="post4">
 							<h2 id="blog1">To Bootcamp or Not To? From a Former Student</h2>
                               <p class="date"></p>
-                              <p class="blog-text"><!--Expriences with Lambda School, Coop Careers, Rev2, and Devslopes--></p>
+                              <p class="blog-text"><!--Expriences with Lambda School, Coop Careers, Revature2, and Devslopes--></p>
 					</li>
 					</li>
 				</ul>
