added folder for longer blog entries, added text to posts 2 and 3 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -23,13 +23,15 @@
 						<article id="post2">
 							<h2 id="title2">SQL or Python: Wait, what about Excel?</h2>
                               <p class="date"></p>
-                              <p class="blog-text"></p>
+                              <p class="blog-text">Before I jump into why Python first is my favorite choice for exploratory data analyzing, followed by SQL, I first like to </p>
 					</li>
 					<li class="blog-entry">
 						<article id="post3">
 							<h2 id="blog1">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
                               <p class="blog-text">
+								  Hello again! The other day I was thinking, why do we still use GDP?
+								  
 							  <!--Who/What/Why and How possible solutions to be solved and why do we still use GDP in the West, Use Tableau Desktop for later project-->
 							  </p>
 					</li>
