added text to post 3 in blog.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -30,7 +30,7 @@
 							<h2 id="blog1">Legatum Prosperity Index: Using Data For Good</h2>
                               <p class="date"></p>
                               <p class="blog-text">
-								  Hello again! The other day I was thinking, why do we still use GDP?
+								  Hello again! The other day I was thinking, why do we still use GDP to gauge the status of a nation? Afte all, companies are no longer as dependent on brute manpower as they once were, and "labor costs" now continue to be cut as a result.
 								  
 							  <!--Who/What/Why and How possible solutions to be solved and why do we still use GDP in the West, Use Tableau Desktop for later project-->
 							  </p>
